# wish

./: .dockerignore  .env.example  .eslintignore  .gitignore  .prettierignore  .prettierrc  Dockerfile  Dockerfile.storybook  docker-compose.yml  docker-entrypoint.sh  eslint.config.js  index.html  next.config.ts  nginx.conf  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.husky/: pre-push
.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  fallback-build-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.json  react-loadable-manifest.json  required-server-files.json  (+2 more)
apps/backend/: .env.example  .env.prod  .gitignore  Dockerfile  README.md  package.json  pyproject.toml
apps/backend/scripts/: export_openapi.py  run_tests.mjs
apps/backend/src/wish_api/: config.py  main.py  openapi.py
apps/backend/src/wish_api/db/: __init__.py  session.py
apps/backend/src/wish_api/dependencies/: auth.py
apps/backend/src/wish_api/models/: __init__.py  email_code.py  user.py
apps/backend/src/wish_api/routers/: auth.py  health.py
apps/backend/src/wish_api/schemas/: auth.py  common.py
apps/backend/src/wish_api/security/: request.py
apps/backend/src/wish_api/services/: auth.py  email.py  email_code.py  oauth.py  rate_limit.py
apps/backend/tests/: conftest.py  test_auth.py  test_config.py  test_email.py  test_email_code.py  test_email_code_dev.py  test_health.py  test_openapi.py
(+604 files in other folders)
