[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wish-api"
version = "0.1.0"
description = "Wish REST API (FastAPI)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"fastapi>=0.115",
	"uvicorn[standard]>=0.32",
	"pydantic-settings>=2.6",
]

[project.optional-dependencies]
dev = [
	"httpx>=0.27",
	"pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
